kubernetes/talos/apps/automation/hass-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}
spec:
  externalName: homeassistant.iot.internal
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
  type: ExternalName
