kubernetes/talos/apps/automation/hass-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}
spec:
  ingressClassName: public
  rules:
    - host: &host $HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: ${APP}
                port:
                  name: http
            path: /
            pathType: Prefix
  tls: [hosts: [*host]]
